--- a/app/views/home/list.html.erb
+++ b/app/views/home/list.html.erb
@@ -1,14 +1,45 @@
 <% content_for :head do %>
- <%= javascript_include_tag 'homemap' %>
- <%= javascript_include_tag 'topojson.v1.min' %>
+    <%= javascript_include_tag 'homemap' %>
+    <%= javascript_include_tag 'topojson.v1.min' %>
 <% end %>
-<div id="crossoverlay"></div>
-<div id="boxoverlay"></div>
-<div id="picturebox"></div>
-<div id="closebutton">X</div>
-<div id="map-canvas"/>
+<div class="boxcontainer">
+  <div class="boxpanel">
+    <div class="box" id="boxmission">
+      <div class="textbox">
+        <%= image_tag("test/mission.png")%>
+      </div>
+    </div>
+    <div class="box" id="boxnewsfeed">
+      <%= render 'layouts/navigation' %>
+      <div id="crossoverlay"></div>
+      <div id="boxoverlay"></div>
+      <div id="picturebox"></div>
+      <div id="closebutton">X</div>
+      <div id="map-canvas"></div>
+    </div>
+    <div class="box" id="boxkit">
+      <div class="textbox">
+        <%= image_tag("test/kit.png")%>
+      </div>
+    </div>
+    <div class="box" id="boxdata">
+      <div class="textbox">
+        <%= image_tag("test/data.png")%>
+      </div>
+    </div>
+    <div class="box" id="boxdata">
+      <div class="textbox">
+        <%= image_tag("test/signin.png")%>
+      </div>
+      <% if user_signed_in? %>
+          <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+      <% else %>
+          <%= link_to 'Login', new_user_session_path %>
+      <% end %>
 
-
+    </div>
+  </div>
+</div>
 
 <script>
     loadPostUrl(<%= @highid %>);
