--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,8 @@
-<div id="fullpage">
-  <div class="section">
+ <div class="formpanel">
     <div class="formsection">
-      <%= render 'layouts/messages' %>
       <%= render 'form' %>
       <br/>
       <br/>
     </div>
-  </div>
 </div>
+
