Fix missing home menu buttons

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -113,11 +113,19 @@ body {
   background-image:image-url("menu/signin_gray.png");
 }
 
-#menubuttonloadhelper {
+#menubuttonloadhelper1 {
   background-image:image-url("menu/ourmission_blue.png");
+}
+#menubuttonloadhelper2 {
   background-image:image-url("menu/newsfeed_blue.png");
+}
+#menubuttonloadhelper3 {
   background-image:image-url("menu/requestkit_blue.png");
+}
+#menubuttonloadhelper4 {
   background-image:image-url("menu/exportdata_blue.png");
+}
+#menubuttonloadhelper5 {
   background-image:image-url("menu/signin_blue.png");
 }
 
