--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,8 @@
     <%= javascript_include_tag 'homemap' %>
     <%= javascript_include_tag 'topojson.v1.min' %>
 <% end %>
+<div class="menuhelperhide menubuttonloadhelper1 menubuttonloadhelper2 menubuttonloadhelper3 menubuttonloadhelper4 menubuttonloadhelper5">
+</div>
 <div class="boxcontainer">
   <div class="boxpanel">
     <div class="box" id="boxmission">
